# Hebrew-numbering

./: .gitignore  DOWNLOAD.md  INSTRUCTIONS.md  README.md  build_exe.bat  examples.py  file_renamer.py  gui.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: ci.yml
assets/: make_icon.py
hebrew_renamer/: __init__.py  __main__.py  cli.py  gematria.py  gui.py  planner.py  renamer.py  sanitizer.py  sorting.py  transaction.py  webapp.py
hebrew_renamer/webui/: app.js  index.html
tests/: test_file_renamer.py  test_gematria.py  test_planner.py  test_sanitizer.py  test_sorting.py  test_transaction.py
